force-app/main/default/objects/Slack_Integration__mdt/Slack_Integration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Slack API integration</description>
    <label>Slack Integration</label>
    <pluralLabel>Slack Integrations</pluralLabel>
</CustomObject>