force-app/main/default/objects/Slack_Integration__mdt/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <description>Slack App ID</description>
    <label>App ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>