force-app/main/default/objects/Slack_Integration__mdt/fields/Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Bot_Token__c</fullName>
    <description>Slack Bot OAuth Token</description>
    <label>Bot Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>