force-app/main/default/objects/Slack_Integration__mdt/fields/Workspace_URL__c.field-meta.xml
<CustomField>
    <fullName>Workspace_URL__c</fullName>
    <description>Slack Workspace URL (e.g., dinfamiliejuristdk.slack.com)</description>
    <label>Workspace URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>